--- a/lib/i18n/strings_zh-Hant-TW.i18n.json
+++ b/lib/i18n/strings_zh-Hant-TW.i18n.json
@@ -100,8 +100,8 @@
                 "description": "設定工作目錄",
                 "hint": "這是一個目錄,不是檔案!",
                 "chooseFrom": "選擇目錄",
-                "notFound": "目錄中找不到 alist 程式",
-                "found": "找到 alist 程式"
+                "notFound": "目錄中找不到 ${exec} 程式",
+                "found": "找到 ${exec} 程式"
             },
             "argumentsList": {
                 "title": "啟動參數列表",
@@ -122,6 +122,7 @@
         },
         "rcloneSettings": {
             "title": "Rclone 選項",
+            "rcloneDirNotSet": "rclone 目錄未設置，請在設定中設定 rclone 目錄以及啟動參數。",
             "autoStartAlist": {
                 "title": "允許 rclone 自動啟動",
                 "description": "這將在 Alist Helper 啟動時自動啟動 rclone。"
