feat: Add support for opening the GUI from the system tray menu

--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -49,6 +49,7 @@
         "open": "Open",
         "hide": "Hide",
         "quit": "Quit",
+        "openGUI":"Open Web GUI",
         "startAlist": "Start Alist",
         "endAlist": "End Alist",
         "tooltip": "Alist Helper",
