fix: update translation for random password generation and clean up build.yaml

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -4,7 +4,7 @@
         "startAlist": "Start",
         "endAlist": "End",
         "openGUI": "Open Web GUI",
-        "genRandomPwd": "Gen Random Pwd",
+        "genRandomPwd": "Reset Pwd",
         "getVersion": "Version Info"
     },
     "rcloneOperation": {
